--- a/noboto_app/pubspec.yaml
+++ b/noboto_app/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -68,8 +71,14 @@ flutter:
     - family: Metropolis
       fonts:
         - asset: assets/fonts/Metropolis-Regular.otf
-        - asset: assets/fonts/Metropolis-ExtraBold.otf
+        - asset: assets/fonts/Metropolis-Medium.otf
+          weight: 500
+        - asset: assets/fonts/Metropolis-SemiBold.otf
+          weight: 600
+        - asset: assets/fonts/Metropolis-Bold.otf
           weight: 700
+        - asset: assets/fonts/Metropolis-ExtraBold.otf
+          weight: 800
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
