--- a/noboto_app/pubspec.yaml
+++ b/noboto_app/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   cached_network_image: ^3.0.0
 
+  flutter_rating_bar: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
