--- a/noboto_app/android/app/src/main/AndroidManifest.xml
+++ b/noboto_app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.noboto.noboto_app">
     <uses-permission android:name="android.permission.INTERNET" />
     <application
+        android:usesCleartextTraffic="true"
         android:label="noboto_app"
         android:icon="@mipmap/ic_launcher">
         <meta-data android:name="com.google.android.geo.API_KEY"
